force-app/main/default/objects/BMCServiceDesk__Category__c/BMCServiceDesk__Category__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for categories.</description>
    <label>Category</label>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>