force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__AvailableForChat__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AvailableForChat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Chat</label>
    <type>Checkbox</type>
</CustomField>