force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__AvailableForIncidents__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AvailableForIncidents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incidents</label>
    <type>Checkbox</type>
</CustomField>