force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__AvailableForServiceCatalog__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AvailableForServiceCatalog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Requests</label>
    <type>Checkbox</type>
</CustomField>