force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__categoryType_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__categoryType_Id__c</fullName>
    <formula>BMCServiceDesk__FKCategoryType__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the category type. Category type is used to group related categories which are commonly used for reporting purposes.</inlineHelpText>
    <label>Category Type~</label>
    <type>Text</type>
</CustomField>