force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__Contains_SR_children_categories__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Contains_SR_children_categories__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contains SR children categories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>