force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__Display_In_SelfService__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Display_In_SelfService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display In SelfService</label>
    <type>Checkbox</type>
</CustomField>