force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__FKCategoryType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCategoryType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the category type. Category type is used to group related categories which are commonly used for reporting purposes.</inlineHelpText>
    <label>Category Type</label>
    <referenceTo>BMCServiceDesk__CategoryTypes__c</referenceTo>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>