force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__FKUrgency__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUrgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the urgency you want to assign when creating an incident with the category. The system administrator would assign a level of urgency to the category depending on the importance of the category.</inlineHelpText>
    <label>Urgency</label>
    <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
    <relationshipName>Categories1</relationshipName>
    <type>Lookup</type>
</CustomField>