force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__HasChildren__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__HasChildren__c</fullName>
    <formula>IF(BMCServiceDesk__Contains_Incident_children_categories__c +  BMCServiceDesk__Contains_SR_children_categories__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>