force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__parentCategory_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__parentCategory_Id__c</fullName>
    <formula>BMCServiceDesk__FKParentCategory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the category that should be designated as the parent category. When a parent category is selected, the current category automatically becomes a child category to the selected parent category.</inlineHelpText>
    <label>Parent Category~</label>
    <type>Text</type>
</CustomField>