force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__parentTree__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__parentTree__c</fullName>
    <label>Parent Tree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>