force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__requireFollowUp__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__requireFollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field to designate incidents for follow-up when the current category is assigned to an incident. These incidents are followed-up when the incident is closed. The follow-up time is specified in the After Hours field.</inlineHelpText>
    <label>Follow Up</label>
    <type>Checkbox</type>
</CustomField>