force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__UnAvailableforBroadcasts__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UnAvailableforBroadcasts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broadcasts</label>
    <type>Checkbox</type>
</CustomField>