force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__UnAvailableForReleases__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UnAvailableForReleases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Releases</label>
    <type>Checkbox</type>
</CustomField>