force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__UnAvailableForTasks__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UnAvailableForTasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks</label>
    <type>Checkbox</type>
</CustomField>