force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__UnderReview__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UnderReview__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not selected by default. When the field is not selected, the imported records (records imported by using the Content Management tile) can be accessed by the system administrator only. The value of the field is set to True when the imported records are deployed to be accessed by users.</description>
    <label>Under Review</label>
    <type>Checkbox</type>
</CustomField>