force-app/main/default/objects/BMCServiceDesk__Category__c/fields/BMCServiceDesk__urgency_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__urgency_Id__c</fullName>
    <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the urgency you want to assign when creating an incident with the category. The system administrator would assign a level of urgency to the category depending on the importance of the category.</inlineHelpText>
    <label>Urgency~</label>
    <type>Text</type>
</CustomField>