force-app/main/default/objects/BMCServiceDesk__Category__c/validationRules/BMCServiceDesk__CategoryId_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__CategoryId_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(Name ) , ISBLANK(Name))</errorConditionFormula>
    <errorMessage>Please enter Category.</errorMessage>
</ValidationRule>