force-app/main/default/objects/BMCServiceDesk__Category__c/validationRules/BMCServiceDesk__Unique_Category_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Unique_Category_Id</fullName>
    <active>false</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorMessage>A record with this Category already exists. Enter a unique Category.</errorMessage>
</ValidationRule>